@@ -3,7 +3,7 @@ Upstream-Name: @PRODUCT@
 Upstream-Contact: MySQL Release Engineering <mysql-build@oss.oracle.com>
 Source: http://dev.mysql.com/
 Files: *
-Copyright: 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+Copyright: 2016, @DEB_COPYRIGHT_YEAR@, Oracle and/or its affiliates.
 License:
  License information can be found in the `/usr/share/mysqlsh/LICENSE' file.
  .
